--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,23 @@
-
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.center{
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.footer{
+  margin: 0px auto;
+  padding-top: 50px;
+  background-color: rgb(127, 127, 179);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.departmentname{
+  font-size: 30px;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+
+
+
+
+
